--- a/app.css
+++ b/app.css
@@ -1,4 +1,39 @@
-@import url(//fonts.googleapis.com/css2?family=Lobster&family=Audiowide&family=Black+Ops+One&family=Oswald:wght@100;200;300;400;500;600;700;800;900&display=swap);
+
+@font-face {
+   font-family: 'Audiowide';
+   src: url('Fonts/Audiowide/Audiowide-Regular.ttf') format('truetype'); 
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Lobster';
+    src: url('Fonts/Lobster/Lobster-Regular.ttf') format('truetype'); 
+	    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+	
+}
+
+
+@font-face {
+   font-family: 'Black Ops One';
+   src: url('Fonts/Black_Ops_One/BlackOpsOne-Regular.ttf') format('truetype');
+      font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+@font-face {
+   font-family: 'Oswald';
+   src: url('Fonts/Oswald/Oswald-VariableFont_wght.ttf') format('truetype'); 
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
 
 *{
 	margin: 0;
@@ -7,18 +42,103 @@
 	font-family: 'Lobster', sans-serif;
 }
 
-body {
+h1 {
+  font-family:'Black Ops One', system-ui;
+  font-size: 50px;
+  line-height: 64px;
+  color: #222;
+}
   
+
+h2 {
+  font-family:'Black Ops One', system-ui;
+  font-size: 46px;
+  line-height: 54px;
+  color: #222;
+}
+  
+h3 {
+  font-family:'Black Ops One', system-ui;
+}
+
+h4 {
+  font-family:'Black Ops One', system-ui;
+  font-size: 20px;
+  color: #222;
+}
+  
+h5 {
+  font-family:'Black Ops One', system-ui;
+}
+
+h6 {
+  font-family:'Black Ops One', system-ui;
+  font-weight: 700;
+  font-size: 12px;
+  color: #222;
+}
+ 
+p {
+  font-family: 'Audiowide', sans-serif;
+  font-size: 16px;
+  color: white;
+  margin: 15px 0 20px 0;
+}
+
+.section-p1 {
+	padding: 40px 80 px;
+}
+
+.section-m1 {
+	margin: 40 px 0;
+}
+
+body {
+  width: 100%;
   background-color: lightblue;
 }
 
-h1 {
-  font-family:'Black Ops One', system-ui;
-  color: black;
-  text-align: center;
+
+#header{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 20px 80px;
+	background: lightgreen;
+	box-shadow: 0px 5px 15px rgba(0,0,0,0.06)
 }
 
-p {
-  font-family: 'Audiowide', sans-serif;
-  font-size: 50px;
+#navbar{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+#navbar li{
+	list-style: none;
+	padding: 0px 20px;
+	position: relative;
+}
+
+#navbar li a{
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: 200;
+	color: black;
+	transition: 0.5s ease;
+}
+
+#navbar li a:hover,
+#navbar li a.active{
+	color: blue;
+}
+#navbar li a.active::after,
+#navbar li a:hover::after{
+	content: "";
+	width: 40%;
+	height: 2px;
+	background: blue;
+	position: absolute;
+	bottom: -4px;
+	left: 20px;
 }
